# mdqp

./: .jenkins.yaml  Dockerfile  jenkins-docker-build-and-push.sh  mdqp.py  pyproject.toml  tag-release
