[tool.poetry]
name = 'Metadata Query Protocol "Proxy"'
version = "0.1.0"
description = "Fetch signed metadata from another mdq"
authors = ["Johan Wassberg <jocar@sunet.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
persist-queue = "^0.8.0"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
